# wikiracer

./: pyproject.toml
py_wikiracer/: internet.py  karma.txt  wikiracer.py
tests/: test_search.py
